Fix misalignment in chrome

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
 
 @media screen and (min-width: 1024px) {
   .left-timeline {
-    left: calc(50vw - 16px);
+    left: calc(50% - 16px);
   }
 }
 
